# backend/internal/handlers/file.go
@@ -6,30 +6,30 @@ import (
 	"github.com/gofiber/fiber/v2"
 )
 
-type FileSystemHandler struct {
-	FileSystemService *services.FileService
+type FileHandler struct {
+	FileService *services.FileService
 }
 
-func NewFileSystemHandler(fsService *services.FileService) *FileSystemHandler {
-	return &FileSystemHandler{
-		FileSystemService: fsService,
+func NewFileHandler(fsService *services.FileService) *FileHandler {
+	return &FileHandler{
+		FileService: fsService,
 	}
 }
 
-// GetFileEntries godoc
+// GetEntries godoc
 // @Summary      ファイルエントリ一覧の取得
 // @Description  指定されたパスからファイルとフォルダーの一覧を取得します
 // @Tags         ファイル管理
 // @Accept       json
 // @Produce      json
 // @Param        path query string false "取得するディレクトリのパス" default(~/penguin)
-// @Success      200 {object} models.FileEntriesListResponse "正常なレスポンス"
+// @Success      200 {object} []models.FileInfo "正常なレスポンス"
 // @Failure      500 {object} map[string]string "サーバーエラー"
-// @Router       /file/entries [get]
-func (h *FileSystemHandler) GetFileEntries(c *fiber.Ctx) error {
+// @Router       /file/fileinfos [get]
+func (h *FileHandler) GetFileInfos(c *fiber.Ctx) error {
 	fsPath := c.Query("path", "")
 
-	fileEntries, err := h.FileSystemService.GetFileEntries(fsPath)
+	fileInfos, err := h.FileService.GetFileInfos(fsPath)
 	if err != nil {
 		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
 			"error":   "Failed to read directory",
@@ -37,5 +37,5 @@ func (h *FileSystemHandler) GetFileEntries(c *fiber.Ctx) error {
 		})
 	}
 
-	return c.JSON(fileEntries)
+	return c.JSON(fileInfos)
 }
